@@ -45,7 +45,6 @@ import java.net.Socket;
 import java.net.SocketException;
 import java.net.SocketTimeoutException;
 import java.net.URI;
-import java.net.URL;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -121,7 +120,7 @@ public class HttpDownloaderTest {
           download(
               downloadManager,
               Collections.singletonList(
-                  new URL(String.format("http://localhost:%d/foo", server.getLocalPort()))),
+                  URI.create(String.format("http://localhost:%d/foo", server.getLocalPort()))),
               Collections.emptyMap(),
               Collections.emptyMap(),
               Optional.empty(),
@@ -161,7 +160,7 @@ public class HttpDownloaderTest {
           download(
               downloadManager,
               Collections.singletonList(
-                  new URL(String.format("http://localhost:%d/arch:ve.zip", server.getLocalPort()))),
+                  URI.create(String.format("http://localhost:%d/arch:ve.zip", server.getLocalPort()))),
               Collections.emptyMap(),
               Collections.emptyMap(),
               Optional.empty(),
@@ -221,9 +220,9 @@ public class HttpDownloaderTest {
                 return null;
               });
 
-      final List<URL> urls = new ArrayList<>(2);
-      urls.add(new URL(String.format("http://localhost:%d/foo", server1.getLocalPort())));
-      urls.add(new URL(String.format("http://localhost:%d/foo", server2.getLocalPort())));
+      final List<URI> urls = new ArrayList<>(2);
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server1.getLocalPort())));
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server2.getLocalPort())));
 
       Path resultingFile =
           download(
@@ -290,9 +289,9 @@ public class HttpDownloaderTest {
                 return null;
               });
 
-      final List<URL> urls = new ArrayList<>(2);
-      urls.add(new URL(String.format("http://localhost:%d/foo", server1.getLocalPort())));
-      urls.add(new URL(String.format("http://localhost:%d/foo", server2.getLocalPort())));
+      final List<URI> urls = new ArrayList<>(2);
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server1.getLocalPort())));
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server2.getLocalPort())));
 
       Path resultingFile =
           download(
@@ -360,9 +359,9 @@ public class HttpDownloaderTest {
                 return null;
               });
 
-      final List<URL> urls = new ArrayList<>(2);
-      urls.add(new URL(String.format("http://localhost:%d/foo", server1.getLocalPort())));
-      urls.add(new URL(String.format("http://localhost:%d/foo", server2.getLocalPort())));
+      final List<URI> urls = new ArrayList<>(2);
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server1.getLocalPort())));
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server2.getLocalPort())));
 
       Path outputFile = fs.getPath(workingDir.newFile().getAbsolutePath());
       try {
@@ -421,10 +420,10 @@ public class HttpDownloaderTest {
                 return null;
               });
 
-      final List<URL> urls = new ArrayList<>(2);
+      final List<URI> urls = new ArrayList<>(2);
       // Use https for the first one to trigger SSL handshake
-      urls.add(new URL(String.format("https://localhost:%d/foo", server1.getLocalPort())));
-      urls.add(new URL(String.format("http://localhost:%d/foo", server2.getLocalPort())));
+      urls.add(URI.create(String.format("https://localhost:%d/foo", server1.getLocalPort())));
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server2.getLocalPort())));
 
       Path resultingFile = fs.getPath(workingDir.newFile().getAbsolutePath());
 
@@ -476,7 +475,7 @@ public class HttpDownloaderTest {
       Path destination = fs.getPath(workingDir.newFile().getAbsolutePath());
       httpDownloader.download(
           Collections.singletonList(
-              new URL(String.format("http://localhost:%d/foo", server.getLocalPort()))),
+              URI.create(String.format("http://localhost:%d/foo", server.getLocalPort()))),
           Collections.emptyMap(),
           StaticCredentials.EMPTY,
           Optional.empty(),
@@ -517,7 +516,7 @@ public class HttpDownloaderTest {
           () ->
               httpDownloader.download(
                   Collections.singletonList(
-                      new URL(String.format("http://localhost:%d/foo", server.getLocalPort()))),
+                      URI.create(String.format("http://localhost:%d/foo", server.getLocalPort()))),
                   Collections.emptyMap(),
                   StaticCredentials.EMPTY,
                   Optional.empty(),
@@ -573,9 +572,9 @@ public class HttpDownloaderTest {
                 return null;
               });
 
-      final List<URL> urls = new ArrayList<>(2);
-      urls.add(new URL(String.format("http://localhost:%d/foo", server1.getLocalPort())));
-      urls.add(new URL(String.format("http://localhost:%d/foo", server2.getLocalPort())));
+      final List<URI> urls = new ArrayList<>(2);
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server1.getLocalPort())));
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server2.getLocalPort())));
 
       Path destination = fs.getPath(workingDir.newFile().getAbsolutePath());
       httpDownloader.download(
@@ -619,7 +618,7 @@ public class HttpDownloaderTest {
       assertThat(
               new String(
                   httpDownloader.downloadAndReadOneUrl(
-                      new URL(String.format("http://localhost:%d/foo", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d/foo", server.getLocalPort())),
                       StaticCredentials.EMPTY,
                       Optional.empty(),
                       eventHandler,
@@ -655,7 +654,7 @@ public class HttpDownloaderTest {
           IOException.class,
           () ->
               httpDownloader.downloadAndReadOneUrl(
-                  new URL(String.format("http://localhost:%d/foo", server.getLocalPort())),
+                  URI.create(String.format("http://localhost:%d/foo", server.getLocalPort())),
                   StaticCredentials.EMPTY,
                   Optional.empty(),
                   eventHandler,
@@ -689,7 +688,7 @@ public class HttpDownloaderTest {
       assertThat(
               new String(
                   httpDownloader.downloadAndReadOneUrl(
-                      new URL(String.format("http://localhost:%d/foo", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d/foo", server.getLocalPort())),
                       StaticCredentials.EMPTY,
                       Optional.of(
                           Checksum.fromString(
@@ -729,7 +728,7 @@ public class HttpDownloaderTest {
               UnrecoverableHttpException.class,
               () ->
                   httpDownloader.downloadAndReadOneUrl(
-                      new URL(String.format("http://localhost:%d/foo", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d/foo", server.getLocalPort())),
                       StaticCredentials.EMPTY,
                       Optional.of(
                           Checksum.fromString(
@@ -765,7 +764,7 @@ public class HttpDownloaderTest {
         () ->
             download(
                 downloadManager,
-                ImmutableList.of(new URL("http://localhost")),
+                ImmutableList.of(URI.create("http://localhost")),
                 Collections.emptyMap(),
                 ImmutableMap.of(),
                 Optional.empty(),
@@ -807,7 +806,7 @@ public class HttpDownloaderTest {
     Path result =
         download(
             downloadManager,
-            ImmutableList.of(new URL("http://localhost")),
+            ImmutableList.of(URI.create("http://localhost")),
             ImmutableMap.of(),
             ImmutableMap.of(),
             Optional.empty(),
@@ -854,7 +853,7 @@ public class HttpDownloaderTest {
     Path result =
         download(
             downloadManager,
-            ImmutableList.of(new URL("http://localhost")),
+            ImmutableList.of(URI.create("http://localhost")),
             ImmutableMap.of(),
             ImmutableMap.of(),
             Optional.empty(),
@@ -898,7 +897,7 @@ public class HttpDownloaderTest {
     Path result =
         download(
             downloadManager,
-            ImmutableList.of(new URL("http://localhost")),
+            ImmutableList.of(URI.create("http://localhost")),
             ImmutableMap.of(),
             ImmutableMap.of(),
             Optional.empty(),
@@ -945,7 +944,7 @@ public class HttpDownloaderTest {
     Path result =
         download(
             downloadManager,
-            ImmutableList.of(new URL("http://localhost")),
+            ImmutableList.of(URI.create("http://localhost")),
             ImmutableMap.of(),
             ImmutableMap.of(),
             Optional.empty(),
@@ -962,7 +961,7 @@ public class HttpDownloaderTest {
 
   public Path download(
       DownloadManager downloadManager,
-      List<URL> originalUrls,
+      List<URI> originalUrls,
       Map<String, List<String>> headers,
       Map<URI, Map<String, List<String>>> authHeaders,
       Optional<Checksum> checksum,
