@@ -15,13 +15,9 @@
 package com.google.devtools.build.lib.bazel.repository.downloader;
 
 import static com.google.common.truth.Truth.assertThat;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 import java.io.IOException;
-import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URL;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -34,8 +30,6 @@ public class HttpUtilsTest {
 
   @Rule
   public final ExpectedException thrown = ExpectedException.none();
-
-  private final HttpURLConnection connection = mock(HttpURLConnection.class);
 
   @Test
   public void getExtension_twoExtensions_returnsLast() throws Exception {
@@ -50,84 +44,69 @@ public class HttpUtilsTest {
   @Test
   public void getLocation_missingInRedirect_throwsIOException() throws Exception {
     thrown.expect(IOException.class);
-    when(connection.getURL()).thenReturn(new URL("http://lol.example"));
-    HttpUtils.getLocation(connection);
+    HttpUtils.getLocation(URI.create("http://lol.example"), null);
   }
 
   @Test
   public void getLocation_absoluteInRedirect_returnsNewUrl() throws Exception {
-    when(connection.getURL()).thenReturn(new URL("http://lol.example"));
-    when(connection.getHeaderField("Location")).thenReturn("http://new.example/hi");
-    assertThat(HttpUtils.getLocation(connection)).isEqualTo(new URL("http://new.example/hi"));
+    assertThat(HttpUtils.getLocation(URI.create("http://lol.example"), "http://new.example/hi"))
+        .isEqualTo(URI.create("http://new.example/hi"));
   }
 
   @Test
   public void getLocation_redirectOnlyHasPath_mergesHostFromOriginalUrl() throws Exception {
-    when(connection.getURL()).thenReturn(new URL("http://lol.example"));
-    when(connection.getHeaderField("Location")).thenReturn("/hi");
-    assertThat(HttpUtils.getLocation(connection)).isEqualTo(new URL("http://lol.example/hi"));
+    assertThat(HttpUtils.getLocation(URI.create("http://lol.example"), "/hi"))
+        .isEqualTo(URI.create("http://lol.example/hi"));
   }
 
   @Test
   public void getLocation_onlyHasPathWithoutSlash_failsToMerge() throws Exception {
     thrown.expect(IOException.class);
     thrown.expectMessage("Could not merge");
-    when(connection.getURL()).thenReturn(new URL("http://lol.example"));
-    when(connection.getHeaderField("Location")).thenReturn("omg");
-    HttpUtils.getLocation(connection);
+    HttpUtils.getLocation(URI.create("http://lol.example"), "omg");
   }
 
   @Test
   public void getLocation_hasFragment_prefersNewFragment() throws Exception {
-    when(connection.getURL()).thenReturn(new URL("http://lol.example#a"));
-    when(connection.getHeaderField("Location")).thenReturn("http://new.example/hi#b");
-    assertThat(HttpUtils.getLocation(connection)).isEqualTo(new URL("http://new.example/hi#b"));
+    assertThat(HttpUtils.getLocation(URI.create("http://lol.example#a"), "http://new.example/hi#b"))
+        .isEqualTo(URI.create("http://new.example/hi#b"));
   }
 
   @Test
   public void getLocation_hasNoFragmentButOriginalDoes_mergesOldFragment() throws Exception {
-    when(connection.getURL()).thenReturn(new URL("http://lol.example#a"));
-    when(connection.getHeaderField("Location")).thenReturn("http://new.example/hi");
-    assertThat(HttpUtils.getLocation(connection)).isEqualTo(new URL("http://new.example/hi#a"));
+    assertThat(HttpUtils.getLocation(URI.create("http://lol.example#a"), "http://new.example/hi"))
+        .isEqualTo(URI.create("http://new.example/hi#a"));
   }
 
   @Test
   public void getLocation_oldUrlHasPassRedirectingToSameDomain_mergesPassword() throws Exception {
-    when(connection.getURL()).thenReturn(new URL("http://a:b@lol.example"));
-    when(connection.getHeaderField("Location")).thenReturn("http://lol.example/hi");
-    assertThat(HttpUtils.getLocation(connection))
-        .isEqualTo(new URL("http://a:b@lol.example/hi"));
-    when(connection.getURL()).thenReturn(new URL("http://a:b@lol.example"));
-    when(connection.getHeaderField("Location")).thenReturn("/hi");
-    assertThat(HttpUtils.getLocation(connection))
-        .isEqualTo(new URL("http://a:b@lol.example/hi"));
+    assertThat(HttpUtils.getLocation(URI.create("http://a:b@lol.example"), "http://lol.example/hi"))
+        .isEqualTo(URI.create("http://a:b@lol.example/hi"));
+    assertThat(HttpUtils.getLocation(URI.create("http://a:b@lol.example"), "/hi"))
+        .isEqualTo(URI.create("http://a:b@lol.example/hi"));
   }
 
   @Test
   public void getLocation_oldUrlHasPasswordRedirectingToNewServer_doesntMerge() throws Exception {
-    when(connection.getURL()).thenReturn(new URL("http://a:b@lol.example"));
-    when(connection.getHeaderField("Location")).thenReturn("http://new.example/hi");
-    assertThat(HttpUtils.getLocation(connection)).isEqualTo(new URL("http://new.example/hi"));
-    when(connection.getURL()).thenReturn(new URL("http://a:b@lol.example"));
-    when(connection.getHeaderField("Location")).thenReturn("http://lol.example:81/hi");
-    assertThat(HttpUtils.getLocation(connection))
-        .isEqualTo(new URL("http://lol.example:81/hi"));
+    assertThat(HttpUtils.getLocation(URI.create("http://a:b@lol.example"), "http://new.example/hi"))
+        .isEqualTo(URI.create("http://new.example/hi"));
+    assertThat(
+            HttpUtils.getLocation(
+                URI.create("http://a:b@lol.example"), "http://lol.example:81/hi"))
+        .isEqualTo(URI.create("http://lol.example:81/hi"));
   }
 
   @Test
   public void getLocation_redirectToFtp_throwsIOException() throws Exception {
     thrown.expect(IOException.class);
     thrown.expectMessage("Bad Location");
-    when(connection.getURL()).thenReturn(new URL("http://lol.example"));
-    when(connection.getHeaderField("Location")).thenReturn("ftp://lol.example");
-    HttpUtils.getLocation(connection);
+    HttpUtils.getLocation(URI.create("http://lol.example"), "ftp://lol.example");
   }
 
   @Test
   public void getLocation_redirectToHttps_works() throws Exception {
-    when(connection.getURL()).thenReturn(new URL("http://lol.example"));
-    when(connection.getHeaderField("Location")).thenReturn("https://lol.example");
-    assertThat(HttpUtils.getLocation(connection)).isEqualTo(new URL("https://lol.example"));
+    assertThat(HttpUtils.getLocation(URI.create("http://lol.example"), "https://lol.example"))
+        .isEqualTo(URI.create("https://lol.example"));
   }
 
   @Test
@@ -135,9 +114,8 @@ public class HttpUtilsTest {
     String redirect =
         "http://redirected.example.org/foo?"
             + "response-content-disposition=attachment%3Bfilename%3D%22bar.tar.gz%22";
-    when(connection.getURL()).thenReturn(new URL("http://original.example.org"));
-    when(connection.getHeaderField("Location")).thenReturn(redirect);
-    assertThat(HttpUtils.getLocation(connection)).isEqualTo(URI.create(redirect).toURL());
+    assertThat(HttpUtils.getLocation(URI.create("http://original.example.org"), redirect))
+        .isEqualTo(URI.create(redirect));
   }
 
   @Test
@@ -145,8 +123,7 @@ public class HttpUtilsTest {
     String redirect =
         "http://redirected.example.org/foo?"
             + "response-content-disposition=attachment%3Bfilename%3D%22bar.tar.gz%22";
-    when(connection.getURL()).thenReturn(new URL("http://a:b@original.example.org"));
-    when(connection.getHeaderField("Location")).thenReturn(redirect);
-    assertThat(HttpUtils.getLocation(connection)).isEqualTo(URI.create(redirect).toURL());
+    assertThat(HttpUtils.getLocation(URI.create("http://a:b@original.example.org"), redirect))
+        .isEqualTo(URI.create(redirect));
   }
 }
